# able-workflow-rule-copier

./: .ansible-lint.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CNAME  LICENSE  README.md  copier.yaml  copier.yml  environment-py312-dev.yaml  pyproject.toml  tox.ini  versions.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: release_tagged_version.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  docs-pages.yml  github-labeler.yml  main.yml  pr.yml
dev/: 404.html  index.html
dev/SUMMARY/: index.html
dev/contributing/: index.html
dev/quick-reference/: index.html
dev/quick-reference/SUMMARY/: index.html
dev/quick-reference/post-copy/: index.html
dev/search/: search_index.json
docs/: README.md  mkdocs.yml
docs/_gen-files-scripts/: render_summaries.py
docs/docs/: SUMMARY.md  index.md
docs/docs/able-workflow-rule-copier/contributing/: index.md
docs/docs/able-workflow-rule-copier/quick-reference/: index.md
docs/docs/contributing/: index.md
docs/docs/quick-reference/: SUMMARY.md  index.md  post-copy-issue.md  post-copy.md
example-answers/weh_interviews/: package.yml  rule.yml
extensions/: __init__.py  strict_undefined.py
hooks/: __init__.py  pyproject2conda.py
includes/: README.md
latest/: 404.html
latest/SUMMARY/: index.html
latest/contributing/: index.html
latest/quick-reference/SUMMARY/: index.html
latest/search/: search_index.json
main/: 404.html  index.html
main/SUMMARY/: index.html
main/contributing/: index.html
main/quick-reference/: index.html
main/quick-reference/SUMMARY/: index.html
main/quick-reference/post-copy/: index.html
schemas/: README.md
scripts/: conda_update.sh  copie_helpers.py  mkdocs.sh  mkdocs_serve.sh  pull_able_workflow_copier.py  sandbox_examples_generate.py
tasks/: README.md  append_smk_include.py
template/.copier-answers/post-copier-todos/: rule-{{ rule_name }}.md.jinja
template/.github/ISSUE_TEMPLATE/: post-copier-rule.md
template/docs/docs/: rule-{{ rule_name }}.md.jinja
template/docs/docs/contributing/templates/: rule-{{ rule_name }}.md.jinja
template/logs/post-copier-todos/: rule-{{ rule_name }}.md.jinja
template/tests/workflow/rules/: test_snakemake_{{ rule_name }}.py.jinja  test_{{ rule_name }}.py.jinja
template/tests/workflow/scripts/: {% if not uses_conda %}rules_global{% else %}rules_conda_{{ conda_env_key }}{% endif %}{{ _copier_conf.sep }}test_{{ rule_name }}.py.jinja
template/tests/workflow/scripts/{% if not uses_conda %}rules_global{% endif %}/: test_{{ rule_name }}.py.jinja
template/tests/workflow/scripts/{% if uses_conda %}rules_conda_{{ conda_env_key }}{% endif %}/: test_{{ rule_name }}.py.jinja
template/workflow/rules/: includes.smk  {% if module_type == 'none' %}{{ smk_file_name }}{% endif %}.jinja
template/workflow/scripts/: {% if not uses_conda %}rules_global{% else %}rules_conda_{{ conda_env_key }}{% endif %}{{ _copier_conf.sep }}{{ rule_name }}.py.jinja  {{ rule_name }}.py.jinja
tests/: conftest.py
tests/docs/: test_mkdocs_build.py
tests/extensions/: __init__.py
tests/hooks/: test_pyproject2conda.py
tests/scripts/: test_sandbox_examples_generate.py
tests/template/: conftest.py
tests/template/rendered/: test_copier_answers.py  test_dir.py  test_dir_pyproject_toml.py
tests/template/tox/: conftest.py  test_tox_envs.py
v0.1.0/: 404.html  index.html
v0.1.0/search/: search_index.json
v0.1.1/quick-reference/: index.html
v0.1.1/quick-reference/SUMMARY/: index.html
v0.1.1/search/: search_index.json
v0.1.2/contributing/: index.html
v0.1.2/quick-reference/: index.html
v0.1.3/: index.html  objects.inv
v0.1.3/quick-reference/SUMMARY/: index.html
v0.1.3/quick-reference/post-copy/: index.html
